<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.cs180ereader.DisplayTxt" >
    
    <item 
        android:id="@+id/action_previous"
        android:icon="@drawable/ic_action_previous_item"
        android:title="@string/previous_page"
        android:showAsAction="always" />
    
    <item  
        android:id="@+id/action_next"
        android:icon="@drawable/ic_action_next_item"
        android:title="@string/next_page"
        android:showAsAction="always" />
    
    <item 
        android:id="@+id/action_change_txt_size"
        android:icon="@drawable/ic_action_change_txt_size"
        android:title="@string/TxtSize"
        android:showAsAction="ifRoom" />
    
    <item 
        android:id="@+id/action_change_txt_font"
        android:icon="@drawable/ic_action_change_txt_font"
        android:title="@string/TxtFont"
        android:showAsAction="ifRoom" />
    
   <item 
        android:id="@+id/action_change_background_color"
        android:icon="@drawable/ic_action_change_background_color"
        android:title="@string/BackgroundColor"
        android:showAsAction="ifRoom" />
  
</menu>
