<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_scan"
          android:icon="@drawable/ic_action_scan"
          android:title="@string/action_search"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_shop"
          android:icon="@drawable/ic_action_shop"
          android:title="@string/action_shop"
          android:showAsAction="never" />
    
    <item android:id="@+id/action_logout"
          android:icon="@drawable/ic_action_logout"
          android:title="@string/action_logout"
          android:showAsAction="ifRoom" />

</menu>
